--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,14 @@ body {
 }
 
 /*component*/
+a {
+	color: #cacaca;
+
+}
+
+a:hover {
+	color: #cacaca;
+}
 .btn-outline-primary {
 	color: #FF8303;
 	border-color: #FF8303;
@@ -87,4 +95,62 @@ header {
 /*Navbar End*/
 
 /*Jumbotron*/
+div.jumbotron {
+	margin-top: 8rem;
+}
+
+div.jumbotron .nav {
+	text-transform: uppercase;
+	font-weight: 500;
+	color: #cacaca;
+	margin-bottom: 1rem;
+	font-size: 0.9rem;
+}
+
+div.jumbotron .nav .nav-link {
+	padding-top: 0;
+	padding-bottom: 0;
+	padding-right: 1rem;
+	border-right: 1px solid #cacaca;
+}
+
+div.jumbotron .nav .nav-link:first-child {
+	padding-left: 0;
+}
+
+div.jumbotron .nav .nav-link:last-child {
+	border-right: none;
+}
+
+div.jumbotron h1 {
+	font-weight: 300;
+	color: #fff;
+	margin-bottom: 2rem;
+}
+
+div.jumbotron .btn-group .btn-outline-primary {
+	border-color: #fff;
+	font-weight: 500;
+	padding-left: 0;
+	padding-right: 1.5rem;
+}
+
+div.jumbotron .btn-group .btn-outline-primary:hover {
+	border-color: #FF8303;
+}
+
+div.jumbotron .btn-group .btn-outline-primary i {
+	margin-right: 0.5rem;
+}
+
+div.jumbotron .btn-group .btn-outline-primary:first-child {
+	color: #fff;
+	border-top-left-radius: 50rem;
+	border-bottom-left-radius: 50rem;
+}
+
+div.jumbotron .btn-group .btn-outline-primary:last-child {
+	border-top-right-radius: 50rem;
+	border-bottom-right-radius: 50rem;
+}
 /*Jumbotron End*/
