--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,40 @@
-/*Font*/
+/**
+ * Documentation for this Layout and Style:
+ * 
+ * Font
+ *
+ * Component
+ * 
+ * Header:
+ * 	Navbar
+ * 	Jumbotron
+ * 	
+ * Main:
+ * 	Schedule
+ * 	Synopsis
+ * 	Facilities
+ * 	Maps
+ *
+ * Footer
+ */
+
+/* ==========================================================================
+   Font
+   ========================================================================== */
 @import url("https://fonts.googleapis.com/css?family=Rubik:300,400,500,700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700&display=swap");
-/*Font End*/
+/* ==========================================================================
+   Font End
+   ========================================================================== */
 
+/* ==========================================================================
+   Component
+   ========================================================================== */
 body {
 	font-family: 'Rubik', sans-serif;
 	font-weight: 400;
 	color: #cacaca;
 }
-
-/*component*/
 
 a {
 	color: #cacaca;
@@ -83,17 +108,25 @@ i.flaticon::before {
 	margin-left: 0;
 }
 
-/*component end*/
+/* ==========================================================================
+   Component End
+   ========================================================================== */
 
-/*Header*/
+/* ==========================================================================
+   Header
+   ========================================================================== */
 header {
 	background-image: url('../images/header.jpg');
 	background-size: cover;
 	min-height: 100vh;
 }
-/*Header End*/
+/* ==========================================================================
+   Header End
+   ========================================================================== */
 
-/*Navbar*/
+/* ==========================================================================
+   Navbar
+   ========================================================================== */
 .navbar {
 	padding: 1.5rem 0;
 	background-color: rgba(0,0,0,.4);
@@ -149,9 +182,13 @@ header {
 	font-weight: 500;
 	border: 2px solid #FF8303;
 }
-/*Navbar End*/
+/* ==========================================================================
+   Navbar End
+   ========================================================================== */
 
-/*Jumbotron*/
+/* ==========================================================================
+   Jumbotron
+   ========================================================================== */
 div.jumbotron {
 	margin-top: 8rem;
 	margin-bottom: 0;
@@ -188,15 +225,21 @@ div.jumbotron .btn-group .btn-outline-primary:last-child {
 	border-top-right-radius: 50rem;
 	border-bottom-right-radius: 50rem;
 }
-/*Jumbotron End*/
+/* ==========================================================================
+   Jumbotron End
+   ========================================================================== */
 
-/*Schedule*/
+/* ==========================================================================
+   Main
+   ========================================================================== */
+
+/* ==========================================================================
+   Schedule
+   ========================================================================== */
 section#schedule {
 	background-color: rgba(0,0,0,.1);
 	padding-bottom: 5rem;
 }
-
-/*Schedule Card*/
 .schedule-card .container {
 	margin-top: -5rem;
 	background-color: #fff;
@@ -240,9 +283,7 @@ section#schedule {
 .schedule-card .card .card-text {
 	color: #FF8303;
 }
-/*Schedule Card End*/
 
-/*Schedule List*/
 .schedule-list .container {
 	margin-top: 5rem;
 	background-color: #fff;
@@ -284,12 +325,13 @@ section#schedule {
 	font-weight: 500;
 	color: #cacaca;
 }
+/* ==========================================================================
+   Schedule End
+   ========================================================================== */
 
-/*Schedule List End*/
-
-/*Schedule End*/
-
-/*Synopsis*/
+/* ==========================================================================
+   Synopsis
+   ========================================================================== */
 .synopsis-image {
 	background-image: url('../images/synopsis.jpg');
 	background-size: cover;
@@ -344,7 +386,6 @@ section#schedule {
 	margin-left: 0;
 }
 
-/*Synopsis Slider*/
 .synopsis-slider {
 	background-color: rgba(0,0,0,.95);
 }
@@ -362,13 +403,13 @@ section#schedule {
 	height: 250px;
 	background-size: cover;
 }
+/* ==========================================================================
+   Synopsis End
+   ========================================================================== */
 
-
-/*Synopsis Slider End*/
-
-/*Synopsis End*/
-
-/*Facilities*/
+/* ==========================================================================
+   Facilities
+   ========================================================================== */
 .facilities-image {
 	background-image: url('../images/jhony.jpg');
 	background-size: cover;
@@ -427,16 +468,27 @@ section#schedule {
 .facilities .card .col-md-2 {
 	margin-left: -1.5rem;
 }
+/* ==========================================================================
+   Facilities End
+   ========================================================================== */
 
-/*Facilities End*/
-
-/*Maps*/
+/* ==========================================================================
+   Maps
+   ========================================================================== */
 .maps .container-fluid {
 	padding: 0;
 }
-/*Maps End*/
+/* ==========================================================================
+   Maps End
+   ========================================================================== */
 
-/*Footer*/
+/* ==========================================================================
+   Main End
+   ========================================================================== */
+
+/* ==========================================================================
+   Footer
+   ========================================================================== */
 .footer-image {
 	background-image: url('../images/assasins.jpg');
 	background-size: cover;
@@ -479,4 +531,6 @@ footer .nav .nav-link {
 footer .nav .nav-link:hover {
 	color: #FE6E00!important;
 }
-/*Footer End*/
+/* ==========================================================================
+   Footer End
+   ========================================================================== */
