--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,8 @@ header {
    Navbar
    ========================================================================== */
 .navbar {
-	padding: 1.5rem 0;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 	background-color: rgba(0,0,0,.4);
 }
 
@@ -534,3 +535,29 @@ footer .nav .nav-link:hover {
 /* ==========================================================================
    Footer End
    ========================================================================== */
+
+/* ==========================================================================
+   Media Query for Mobile Desktop
+   ========================================================================== */
+
+@media (max-width: 768px) {
+	/* ==========================================================================
+	   Navbar
+	   ========================================================================== */
+	.navbar .navbar-collapse {
+		margin-top: 1rem;
+	}
+
+	.navbar form {
+		margin-right: 0!important;
+		display: block;
+		margin-bottom: 1rem;
+	}
+
+	.navbar .navbar-collapse a {
+		display: none;
+	}
+	/* ==========================================================================
+	   Navbar End
+	   ========================================================================== */
+}
