Fix Header for mobile version: issues #2

--- a/styles/style.css
+++ b/styles/style.css
@@ -537,7 +537,7 @@ footer .nav .nav-link:hover {
    ========================================================================== */
 
 /* ==========================================================================
-   Media Query for Mobile Desktop
+   Media Query for Mobile Version
    ========================================================================== */
 
 @media (max-width: 768px) {
@@ -559,5 +559,24 @@ footer .nav .nav-link:hover {
 	}
 	/* ==========================================================================
 	   Navbar End
+	   ========================================================================== */
+	
+	/* ==========================================================================
+	   Jumbotron
+	   ========================================================================== */
+	div.jumbotron .nav {
+		display: block;
+		text-align: center;
+	}
+
+	div.jumbotron .nav .nav-link {
+		display: inline;
+	}
+
+	div.jumbotron {
+		text-align: center;
+	}
+	/* ==========================================================================
+	   Jumbotron End
 	   ========================================================================== */
 }
