Styling Schedule: issues #3 & #4

--- a/styles/style.css
+++ b/styles/style.css
@@ -579,4 +579,23 @@ footer .nav .nav-link:hover {
 	/* ==========================================================================
 	   Jumbotron End
 	   ========================================================================== */
+	
+	/* ==========================================================================
+	   Schedule
+	   ========================================================================== */
+	.schedule-card .col-md-3 .card {
+		width: 80%;
+		height: auto;
+		margin-left: auto;
+		margin-right: auto;
+		
+	}
+
+	.schedule-card .col-md-3 .card img {
+		width: 100%;
+		height: auto;
+	}
+	/* ==========================================================================
+	   Schedule End
+	   ========================================================================== */
 }
