--- a/styles/style.css
+++ b/styles/style.css
@@ -585,7 +585,7 @@ footer .nav .nav-link:hover {
 	   ========================================================================== */
 	.schedule-card .col-md-3 .card {
 		width: 80%;
-		height: auto;
+		height: 100%;
 		margin-left: auto;
 		margin-right: auto;
 		
@@ -593,7 +593,7 @@ footer .nav .nav-link:hover {
 
 	.schedule-card .col-md-3 .card img {
 		width: 100%;
-		height: auto;
+		height: 100%;
 	}
 	/* ==========================================================================
 	   Schedule End
