fix footer for mobile: issues 8

--- a/styles/style.css
+++ b/styles/style.css
@@ -653,9 +653,25 @@ footer .nav .nav-link:hover {
 		margin: 1rem 2rem;
 	}
 
-
-
 	/* ==========================================================================
 	   Facilities End
+	   ========================================================================== */
+
+	/* ==========================================================================
+	   Footer
+	   ========================================================================== */
+	
+	footer .nav {
+		display: flex;
+		justify-content: center;
+		margin-bottom: 0;
+	}
+
+	footer .nav .nav-item {
+		font-size: 1rem;
+	}
+
+	/* ==========================================================================
+	   Footer End
 	   ========================================================================== */
 }
