--- a/styles/style.css
+++ b/styles/style.css
@@ -251,19 +251,19 @@ section#schedule {
 	border-bottom-right-radius: 1rem;
 }
 
-.schedule-card .col-md-8 h3 {
+.schedule-card .col-6 h3 {
 	color: #FF8303;
 	font-weight: 300;
 }
 
-.schedule-card .col-md-4 p {
+.schedule-card .col-6 p {
 	color: #FF8303;
 	font-weight: 500;
 	text-transform: uppercase;
 	font-size: 0.9rem;
 }
 
-.schedule-card .col-md-4 i {
+.schedule-card .col-6 i {
 	margin-right: 0.5rem;
 }
 
@@ -375,15 +375,15 @@ section#schedule {
 	width: 550px;
 }
 
-.synopsis-overview .col-sm-6 p {
+.synopsis-overview .col-6 p {
 	font-weight: 500;
 }
 
-.synopsis-overview .col-sm-6 i {
+.synopsis-overview .col-6 i {
 	color: #FF8303;
 }
 
-.synopsis-overview .col-sm-6 i::before {
+.synopsis-overview .col-6 i::before {
 	margin-left: 0;
 }
 
@@ -544,6 +544,8 @@ footer .nav .nav-link:hover {
 	html {
 		font-size: 14px;
 	}
+
+
 	
 	/* ==========================================================================
 	   Navbar
@@ -602,7 +604,7 @@ footer .nav .nav-link:hover {
 
 	.schedule-list .col-md-8 button, .schedule-list .col-md-4 button {
 		padding: 0.5rem;
-		font-size: 0.7rem;
+		font-size: 1rem;
 	}
 
 	.schedule-list .table {
@@ -638,6 +640,17 @@ footer .nav .nav-link:hover {
 		width: 100%;
 		height: auto;
 	}
+
+	.synopsis-overview .btn-outline-primary {
+		padding-left: 1rem!important;
+		padding-right: 1rem!important;
+	}
+
+	.synopsis-overview .btn-outline-primary .flaticon-business {
+		display: none;
+	}
+
+
 	/* ==========================================================================
 	   Synopsis End
 	   ========================================================================== */
